@@ -1,10 +1,14 @@
+2003-03-03  Ulrich Drepper  <drepper@redhat.com>
+
+	* include/sched.h (__clone2): Use ... instead of adding all the
+	new parameters.
+
 2003-03-03  Roland McGrath  <roland@redhat.com>
 
 	* elf/dl-load.c (struct filebuf): Fix typo in last change.
 
 	* sysdeps/powerpc/powerpc32/elf/configure.in: Don't define
 	PI_STATIC_AND_HIDDEN.
-	* sysdeps/powerpc/powerpc32/elf/configure: Regenerated.
 
 2003-03-03  Ian Wienand  <ianw@gelato.unsw.edu.au>
 
